--- a/demo-doc-4-text-analysis-and-beyond.Rmd
+++ b/demo-doc-4-text-analysis-and-beyond.Rmd
@@ -14,7 +14,7 @@ We'll also load the {tidytext} package
 ```{r}
 library(dataedu)
 library(tidyverse)
-libary(tidytext)
+library(tidytext)
 ```
 
 If you saw some messages, success!
@@ -27,38 +27,41 @@ tt_tweets
 
 # Text analysis
 
-class: inverse, center, middle
-
-# Text analysis with quanteda
-
----
-
-# Term frequencies
-
----
-
-# Sentiment analysis
-
----
-
-# Plots
-
----
-
-class: inverse, center, middle
-
-# Doing more with data science
----
-
-# Installing packages
-
+Prepare data for analysis by filtering, selecting key variables, and processing the status ID variable.
 
 ```{r}
-
+tweets <-
+  raw_tweets %>%
+  #filter for English tweets
+  filter(lang == "en") %>%
+  select(status_id, text) %>%
+  # Convert the ID field to the character data type
+  mutate(status_id = as.character(status_id))
 ```
 
-# Topic models (leap)
+Tokenize tweets. 
 
 ```{r}
+tokens <- 
+  tweets %>%
+  unnest_tokens(output = word, input = text)
+```
 
+Remove stopwords---common words.
+
+```{r}
+data(stop_words)
+
+tokens <-
+  tokens %>%
+  anti_join(stop_words, by = "word")
+```
+
+Calculate common words
+
+```{r}
+tokens %>%
+  count(word, sort = TRUE) %>%
+  # n as a percent of total words
+  mutate(percent = n / sum(n) * 100)
 ```
