--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -17,8 +17,8 @@ library(here)
 - RStudio Cloud (with links to the *demo docs*): 
   - Part 1: https://rstudio.cloud/project/1421785
   - Part 2: https://rstudio.cloud/project/1427304
-  - Part 3: (to be added)
-  - Part 4: (to be added)
+  - Part 3: https://rstudio.cloud/project/1427304
+  - Part 4: https://rstudio.cloud/project/1427304
   
 - Repository with all files for today's workshop: https://github.com/jrosen48/swu-data-sci
 
