--- a/docs/3-modeling-and-preparing.Rmd
+++ b/docs/3-modeling-and-preparing.Rmd
@@ -44,7 +44,7 @@ class: inverse, center, middle
 https://github.com/jrosen48/swu-data-sci
 
 **RStudio Cloud**
-https://rstudio.cloud/project/1421785
+https://rstudio.cloud/project/1427304
 
 **Ask questions on Google Docs:**
 https://docs.google.com/document/d/1zB3IilyuU0khd10DWQNn44peOkVNI-OLyxRW6WFW5Qw/edit
@@ -70,6 +70,43 @@ class: inverse, center, middle
 
 # Linear (regression) models
 
+- Think about a linear (regression) model as a way to answer the question: *What is related to some outcome or result I care about?*
+- *Dependent variable*: An outcome or result
+- *Independent variable*: The thing(s) that relate to the outcome or result you crae about
+- Sometimes, a regression with a single dependent variable and a single independent variable is called a single regression, and one with more than one independent variable is called a multiple regression
+
+---
+
+# Single regression example
+
+```{r}
+m1 <- lm(FinalGradeCEMS ~ TimeSpent, data = sci_mo_processed)
+summary(m1)
+```
+
+---
+
+# Multiple regression example
+
+Note: int refers to students' interest
+
+```{r}
+m2 <- lm(FinalGradeCEMS ~ TimeSpent + int, data = sci_mo_processed)
+summary(m2)
+```
+
+---
+
+# Multiple regression example
+
+Dummy-coding is a powerful (but easy in R ) technique; recall
+that subject is a group---a factor
+
+```{r, eval = FALSE}
+m3 <- lm(FinalGradeCEMS ~ TimeSpent + int + subject, data = sci_mo_processed)
+summary(m3)
+```
+
 ---
 
 class: inverse, center, middle
@@ -79,9 +116,8 @@ class: inverse, center, middle
 *Let's hop over to the demo doc for part 3!*
 
 - `lm()` (for linear model)
-- preparing data
-- reading and writing data
-- reading your own data (leap)
+- reading and (especially) writing data
+- multi-level models (leap)
 
 ---
 
